# proyecto1

./: Cargo.toml  Dockerfile.cliente  Dockerfile.servidor  README.md  docker-compose.yml
cliente/: Cargo.toml
cliente/src/: main.rs  util.rs
protocolo/: Cargo.toml
protocolo/src/: lib.rs  mensajes_cliente.rs  mensajes_servidor.rs
protocolo/tests/: test_client_messages.rs  test_mensajes_cliente.rs  test_mensajes_servidor.rs  tests_parseo.rs
reporte/: main.tex
servidor/: Cargo.toml
servidor/src/: bitacora.rs  main.rs  util.rs
