[workspace]
members = ["servidor", "cliente", "protocolo"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Emilio Martínez García <e.martinez.g@ciencias.unam.mx>"]
license = "GPL-3.0-or-later"
rust-version = "1.93.1"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
tokio = { version = "1.50.0", features = ["net", "rt-multi-thread", "macros",
      	  	    	      	       	  "sync", "io-util", "io-std", "signal"] }
protocolo = { path = "protocolo/" }
colored = "3.1.1"